tests/resource/valid/function/definition.mamba
def fun_c_1(b: (Int, Int)) => print(b)
