tests/resource/invalid/syntax/type_annotation_in_tuple.mamba
def (a: Int, b) := (10, 20)
